# telegram-sorter

./: .env.example  .gitignore  Dockerfile  config.yaml  pyproject.toml
k8s/: classifier.yaml  configmap.yaml  listener.yaml  namespace.yaml  redis.yaml  router.yaml  secret.yaml.example
scripts/: find_duplicates.py  setup_session.py  test_channels.py  verify_order.py
src/: classifier.py  config.py  listener.py  main.py  models.py  queue_client.py  router.py
